# padifood-backend

./: .gitignore  README.md  UNDERSTANDING.md  agent.py  check_db.py  check_invoice.py  config.py  convert.py  convert_flex.py  convert_otto_pdf.py  db.py  diagnose_otto_rates.py  inspect_db.py  loaders.py  main.py  models.py  nginx-api.padi.conf  otto_identifier_mapping.py  padifood-backend.service  person_wagegroups.csv  push_prod.sh  pyproject.toml  reset_db.py  test_db.py  test_validation.py  test_wagegroup_rate_ingestion.py  test_wagegroup_rates.py  validation_hours.py  validation_wagegroups.py  verified_name_pairs.csv  wagegroup_rates.py
alembic/: env.py
formatted_input/: 202549 Kloklijst Padifood Flexspecialisten.csv  202549 Kloklijst Padifood Otto Workforce.csv  202550 Kloklijst Padifood Flexspecialisten - unique_names.csv  202550 Kloklijst Padifood Flexspecialisten.csv  202550 Kloklijst Padifood Otto Workforce - unique_names.csv  202550 Kloklijst Padifood Otto Workforce.csv  202550 Padifood specificatie week 50 - Export Factuur.csv  202551 Kloklijst Padifood Flexspecialisten.csv  202551 Kloklijst Padifood Otto Workforce - unique_names.csv  202551 Kloklijst Padifood Otto Workforce- correctie Jankowski.csv  202551 Kloklijst Padifood Otto Workforce.csv  202551 Padifood specificatie - Export Factuur.csv  202551 Padifood specificatie - Tarievensheet per persoon.csv  202551 Padifood specificatie - unique_names.csv  202609 Kloklijst Padifood Flexspecialisten.csv  202609 Kloklijst Padifood Otto Workforce.csv  202610 Kloklijst Padifood Flexspecialisten.csv  202610 Kloklijst Padifood Otto Workforce.csv  202611 Kloklijst Padifood Flexspecialisten.csv  (+8 more)
(+97 files in other folders)
